--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -54,6 +54,8 @@ header .banner {
    width: 85%;
    padding-bottom: 30px;
    text-align: center;
+   background-color: rgba(0,0,0, 0.6);
+   border-radius: 2em;
 }
 
 header .banner-text { width: 100%; }
