Added a background to the navbar.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -150,7 +150,7 @@ header .scrolldown a:hover { color: #11ABB0; }
 ul#nav {
    min-height: 48px;
    width: auto;
-
+   background-color: rgba(0,0,0, 0.6);
    /* center align the menu */
    text-align: center;
 }
