--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -67,7 +67,7 @@ header .banner-text h1 {
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
-   font: 18px/1.9em 'librebaskerville-regular', serif;
+   font: 18px/1.9em 'librebaskerville-regular', serif;    /* Change this line to increase the size of the banner's text */
    color: #fff;
    margin: 0 auto;
    width: 70%;
@@ -88,7 +88,7 @@ header .banner-text hr {
 header .social {
    margin: 24px 0;
    padding: 0;
-   font-size: 30px;
+   font-size: 50px;    /* Change this line to increase the size of the banner's text */
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 header .social li {
